[package]
name = "tokio-rayon"
version = "2.0.0-dev"
authors = ["Andy Barron <andrewlbarron@gmail.com>"]
edition = "2018"
description = "Mix async code with CPU-heavy thread pools using Tokio + Rayon"
license-file = "LICENSE.txt"
repository = "https://github.com/andybarron/tokio-rayon"
keywords = ["tokio", "rayon", "async", "thread-pool"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[dependencies]
derivative = "^2.2.0"
tokio = { version = "^1.4.0", default-features = false, features = ["sync"] }
pin-project = "^1.0.6"
rayon = "^1.5.0"
thiserror = "^1.0.24"

[dev-dependencies]
tokio-test = "^0.4.1"

[dev-dependencies.tokio]
version = "^1.4.0"
default-features = false
features = ["sync", "macros", "rt", "time", "rt-multi-thread"]
