[package]
name = "tokio-rayon"
version = "2.1.2-dev"
authors = ["Andy Barron <andrewlbarron@gmail.com>"]
edition = "2021"
description = "Mix async code with CPU-heavy thread pools using Tokio + Rayon"
license = "MIT"
readme = "README.md"
repository = "https://github.com/andybarron/tokio-rayon"
keywords = ["tokio", "rayon", "async", "thread-pool"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[dependencies]
tokio = { version = "1.23.0", default-features = false, features = ["sync"] }
rayon = "1.6.1"

[dev-dependencies]
tokio-test = "0.4.2"

[dev-dependencies.tokio]
version = "1.23.0"
default-features = false
features = ["sync", "macros", "rt", "time", "rt-multi-thread"]
